crates/sdk-tests/tests/app/declaring_enum_not_allowed.stderr
error: declaring `enum` inside `#[app]` is not supported.
 --> $DIR/declaring_enum_not_allowed.rs:3:1
  |
3 | #[app]
  | ^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
