crates/sdk-tests/tests/app/declaring_enum_not_allowed.rs
use svm_sdk::app;

#[app]
mod App {
    enum MyEum {}
}

fn main() {}
